Updated Profile Info updation API
